added-routing-and-rest-API

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
-<h2> Employee List </h2>
+<h4> Employee List </h4>
 <table class="table table-bordered table-hover">
-    <thead class="table-primary">
+    <thead class="table-dark">
         <tr>
             <th> First Name </th>
             <th> Last Name </th>
