--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,21 @@
-<h1 class="text-center">{{title}}</h1>
-<app-employee-list></app-employee-list>
+<nav class="navbar navbar-light" style="background-color: rgb(45, 205, 186);">
+  <ul class = "navbar-nav">
+      <li class = "nav-item">
+          <a routerLink="employees" routerLinkActive="active" class="nav-link" style="font-size: larger;">Employee List</a>
+      </li>
+      <!-- <li class = "nav-item">
+          <a routerLink="create-employee" routerLinkActive="active" class="nav-link" >Add Employee</a>
+      </li> -->
+  </ul>
+</nav>
+<br/>
+<h3 class="text-center">{{title}}</h3>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<footer class = "footer">
+  <div class = "container">
+      <span>All Rights Reserved 2022</span>
+  </div>
+</footer>
