--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-@import "~bootstrap/dist/css/bootstrap.min.css"
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width:100%;
+    height: 40px;
+    background-color: rgb(45, 205, 186);
+    text-align: center;
+    color: rgb(15, 14, 14);
+}
