--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-light" style="background-color: rgb(45, 205, 186);">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: rgb(56, 59, 59);">
   <ul class = "navbar-nav">
-      <li class = "nav-item">
-          <a routerLink="employees" routerLinkActive="active" class="nav-link" style="font-size: larger;">Employee List</a>
+      <li class = "nav-iem">
+          <a routerLink="employees" routerLinkActive="active" class="nav-link" style="font-size: larger; color: white;">Employee List</a>
       </li>
-      <!-- <li class = "nav-item">
-          <a routerLink="create-employee" routerLinkActive="active" class="nav-link" >Add Employee</a>
-      </li> -->
+      <li class = "nav-item">
+          <a routerLink="create-employee" routerLinkActive="active" class="nav-link" style="font-size: larger; color: white">Add Employee</a>
+      </li>
   </ul>
 </nav>
 <br/>
@@ -16,6 +16,6 @@
 
 <footer class = "footer">
   <div class = "container">
-      <span>All Rights Reserved 2022</span>
+      <span style="color: white;">All Rights Reserved 2022</span>
   </div>
 </footer>
