--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -5,6 +5,7 @@
             <th> First Name </th>
             <th> Last Name </th>
             <th> Email Id </th>
+            <th> Actions </th>
         </tr>
     </thead>
     <tbody>
@@ -12,6 +13,11 @@
             <td> {{data.firstName}} </td>
             <td> {{data.lastName}} </td>
             <td> {{data.emailId}} </td>
+            <td>
+                <button (click)="updateEmployee(data.id)" class="btn btn-info"> Update </button>
+                <button (click)="deleteEmployee(data.id)" class="btn btn-danger" style="margin-left: 10px;"> Delete </button>
+                <button (click)="employeeDetails(data.id)" class="btn btn-success" style="margin-left: 10px;"> View </button>
+            </td>
         </tr>
     </tbody>
 </table>
